# Algo_Tester

./: .gitignore  .replit  README.md  app.py  backtester.py  data_handler.py  metrics.py  models.py  portfolio.py  pyproject.toml  routes.py  strategies.py
instance/: backtester.db
static/css/: main.css
static/js/: main.js
templates/: base.html  index.html  results.html  strategy_config.html
